--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines":{
+    "node":"22.11.0"
+
+  }
   "name": "major-project",
   "version": "1.0.0",
   "main": "index.js",
@@ -11,8 +15,9 @@
   "description": "",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.1",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
